# skywatch-live

./: .dockerignore  .gitattributes  .gitignore  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  QUICKSTART.md  README.md  SECURITY.md  SUPPORT.md  TESTING.md  THIRD_PARTY_NOTICES.md  TROUBLESHOOTING.md  docker-compose.yml  package.json  startup.bat  startup.ps1
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
backend/: .dockerignore  .env.example  Dockerfile  manage.py  pyproject.toml  requirements.txt
backend/flights/: admin.py  apps.py  consumers.py  metrics.py  models.py  routing.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  views.py
backend/flights/management/commands/: prune_flight_data.py  seed_demo_data.py  train_lstm_anomaly.py
backend/flights/migrations/: 0001_initial.py  0002_aircraft_category_flightstate_category.py  0003_add_data_source_and_metadata.py  0004_aircraftprofile_alter_anomalyevent_anomaly_type.py  0005_alter_aircraft_last_seen.py  0006_quickwins_realtime_observability.py  0007_production_hardening.py
backend/flights/services/: adsb_sources.py  advanced_detection.py  aircraft_db.py  airspace_restrictions.py  anomaly_detector.py  cache.py  celestrak.py  demo_data.py  explainability.py  faa_radar.py  flight_profiler.py  kalman_predictor.py  ogn_client.py  opensky.py  prediction.py  satellite_adsb.py  source_adapters.py  tfr.py  uat_client.py  weather.py
backend/ml/: features.py  lstm.py  train.py
backend/skywatch/: api.py  asgi.py  celery.py  middleware.py  settings.py  tests.py  urls.py  wsgi.py
docs/: STATUS.md  architecture.md  (+3 more)
(+93 files in other folders)
